Fix Next/Prev arrow alignment

--- a/front/resources/stylesheets/analytics.css
+++ b/front/resources/stylesheets/analytics.css
@@ -55,7 +55,7 @@ a:hover {
 	font-size: 32px;
 	top: 50%;
 	left: 50%;
-	transform: translateX(-50%) translateY(-47%);
+	transform: translateX(-50%) translateY(-50%);
 }
 
 #next::before { content: "→" }
